# OP

labs/OPlabs/: task1
labs/OPlabs/task2/: .gitignore  main.py  pyproject.toml
labs/OPlabs/task2/itertools_lib/: __init__.py
labs/OPlabs/task3/: main.py  pyproject.toml
labs/OPlabs/task3/itertools_lib/: __init__.py  memoization.py
labs/OPlabs/task3/tests/: memo.py
labs/OPlabs/task4/: main.py  pyproject.toml
labs/OPlabs/task4/itertools_lib/: __init__.py  priority_queue.py
labs/OPlabs/task5/: main.py
labs/OPlabs/task5/itertools_lib/: __init__.py  async_utils.py
labs/OPlabs/task6/: main.py
labs/OPlabs/task6/itertools_lib/: __init__.py  stream_processor.py
labs/OPlabs/task7/: main.py
labs/OPlabs/task7/itertools_lib/: __init__.py  reactive.py
labs/OPlabs/task8/: main.py
labs/OPlabs/task8/itertools_lib/: __init__.py  auth_proxy.py
labs/OPlabs/task9/: main.py
labs/OPlabs/task9/itertools_lib/: logger.py
