[tool.poetry]
name = "itertools_lib"
version = "0.1.0"
description = "A library for infinite generators and timed iterators"
authors = ["ЗлатаБ <zlatabriznicenko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"